managing font sizes in index.scss fixing some spacing

--- a/src/components/Intro/style.scss
+++ b/src/components/Intro/style.scss
@@ -2,14 +2,8 @@
   position: relative;
   margin-bottom: 15px;
   background: white;
-  padding: 15px;
+  padding: 20px;
   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.3);
-
-  > .title {
-    font-size: 8vw;
-    color: #03A9F4;
-    margin: 0 0 10px 0;
-  }
 
   > .slogan {
     width: 100%;
@@ -24,40 +18,12 @@
       padding: 0 5px;
     }
   }
-}
 
-@media (min-width: 800px) {
-
-  .site-intro {
-    margin-top: -20px;
-    margin-right: -20px;
-    margin-bottom: 20px;
-    font-size: 20px;
-
-    > .title {
-      font-size: 50px;
-    }
+  @media (min-width: 800px) {
+    margin: -20px -20px 20px 0;
 
     > .slogan {
       text-align: right;
-    }
-  }
-}
-
-@media (min-width: 1200px) {
-
-  .site-intro {
-    padding: 25px 100px;
-
-    > .title {
-      font-size: 50px;
-      margin-left: -85px;
-    }
-
-    > .slogan {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
     }
   }
 }
